--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,16 @@
 [build]
   command = "npm run build"
-  publish = "build"
+  publish = ".next"
+[build.processing]
+  skip_processing = false
+[build.processing.css]
+  bundle = true
+  minify = true
+[build.processing.js]
+  bundle = true
+  minify = true
+[context.deploy-preview.processing]
+  skip_processing = true
+[context.production.environment]
+  NODE_ENV = "production"
+  NEXT_SERVERLESS = "true"
