--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "@sentry/nextjs": "^7.38.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "gray-matter": "^4.0.3",
     "next": "13.1.6",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
-  },
-  "devDependencies": {
-    "frontmatter-markdown-loader": "^3.7.0"
   }
 }
