Add mailchimp subscription, update logo, working header

--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 #MailChimp
-MC_KEY=
-MC_LIST_ID=
-MC_SERVER=
-
+NEXT_PUBLIC_MC_KEY=
+NEXT_PUBLIC_MC_LIST_ID=
+NEXT_PUBLIC_MC_SERVER=
 #Sentry
 SENTRY_DSN=
 
