--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run export"
+  command = "npm run build && npm run export"
   publish = "out"
 [build.processing]
   skip_processing = false
