--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,14 @@
 [build]
-  command = "npm run build"
-  publish = ".next"
+  command = "npm run build && npm run export"
+  publish = "out"
+[build.processing]
+  skip_processing = false
+[build.processing.css]
+  bundle = true
+  minify = true
+[build.processing.js]
+  bundle = true
+  minify = true
+[context.production.environment]
+  NODE_ENV = "production"
+  NEXT_SERVERLESS = "true"
