--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "npm run build && npm run export"
-  publish = ".next"
+  publish = "out"
 [build.processing]
   skip_processing = false
 [build.processing.css]
@@ -12,3 +12,4 @@
 [context.production.environment]
   NODE_ENV = "production"
   NEXT_SERVERLESS = "true"
+  NETLIFY_NEXT_PLUGIN_SKIP = "true"
