--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
   command = "npm run build && npm run export"
+  functions = "out_functions"
   publish = "out"
 [build.processing]
   skip_processing = false
