--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
-    "react-markdown": "^8.0.5"
+    "react-markdown": "^8.0.5",
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "postcss": "^8.4.21"
   }
 }
