--- a/netlify.toml
+++ b/netlify.toml
@@ -13,3 +13,8 @@
   NODE_ENV = "production"
   NEXT_SERVERLESS = "true"
   NETLIFY_NEXT_PLUGIN_SKIP = "true"
+  [[redirects]]
+    from = "https://shop.overcomewithchrist.com"
+    to = "https://overcomewithchrist.com/shop"
+    status = 301
+    force = true
