--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "autoprefixer": "^10.4.13",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
-    "gray-matter": "^4.0.3",
+    "frontmatter-markdown-loader": "^3.7.0",
     "next": "13.1.6",
     "postcss": "^8.4.21",
     "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
-    "react-markdown": "^8.0.5",
     "tailwindcss": "^3.2.7"
   }
 }
