--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.13",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "feed": "^4.2.2",
     "frontmatter-markdown-loader": "^3.7.0",
     "next": "13.1.6",
     "postcss": "^8.4.21",
