--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -6,6 +6,10 @@ backend:
 media_folder: public/img
 public_folder: img
 display_url: '/'
+slug:
+  encoding: "ascii"
+  clean_accents: true
+  sanitize_replacement: "-"
 
 collections:
   - name: "page"
@@ -17,7 +21,6 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "page"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
-
   - name: "post"
     label: "Posts"
     label_singular: "Post"
@@ -33,7 +36,6 @@ collections:
       - {label: "Publish Date", name: "date", widget: "datetime", date_format: "LL", format: "LL"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Author", name: "author", widget: "string", default: "Cyntia Seumo" }
-
   - name: "products"
     label: "Products"
     label_singular: "Product"
@@ -42,7 +44,7 @@ collections:
     fields: 
       - {label: "layout", name: "layout", widget: "hidden", default: "product"}
       - {label: "Product Id", name: "pid", widget: "string"}
-      - {label: "Slug", name: "slug", widget: "string" }
+      - {label: "Slug", name: "test", widget: "string" }
       - {label: "Title", name: "title", widget: "string" }
       - {label: "Price", name: "price", widget: "number", value_type: "float"}
       - {label: "Description", name: "description", widget: 'text'}
@@ -52,7 +54,7 @@ collections:
         summary: '{{fields.color}} / {{fields.size}}'
         require: "false"
         fields: 
-          - {label: "Variant Id", name: "variantId", widget: "number"}
+          - {label: "Variant Id", name: "variantId", widget: "string"}
           - {label: "Size", name: "size", widget: "string"}
           - {label: "Color", name: "color", widget: "string"}
           - {label: "SKU", name: "sku", widget: "string"}
