--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -25,7 +25,7 @@ collections:
     label: "Posts"
     label_singular: "Post"
     folder: "src/content/posts"
-    media_folder: "public/img"
+    media_folder: "public/img/blog"
     public_folder: "img/blog"
     create: true
     slug: "{{slug}}"
