--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -47,8 +47,9 @@ collections:
     fields: 
       - {label: "layout", name: "layout", widget: "hidden", default: "product"}
       - {label: "Product Id", name: "pid", widget: "string"}
-      - {label: "Slug", name: "slug", widget: "string" }
-      - {label: "Title", name: "title", widget: "string" }
+      - {label: "SKU", name: "sku", widget: "string" }
+      - {label: "Name", name: "name", widget: "string" }
+      - {label: "Color", name: "color", widget: "string" }
       - {label: "Price", name: "price", widget: "number", value_type: "float"}
       - {label: "Description", name: "description", widget: 'text'}
       - label: "Variants"
@@ -56,12 +57,9 @@ collections:
         widget: "list"
         summary: '{{fields.color}} / {{fields.size}}'
         require: "false"
-        fields: 
-          - {label: "Variant Id", name: "variantId", widget: "string"}
+        fields:
           - {label: "Size", name: "size", widget: "string"}
-          - {label: "Color", name: "color", widget: "string"}
-          - {label: "SKU", name: "sku", widget: "string"}
-          - {label: "Price", name: "price", widget: "number", value_type: "float"}
+          - {label: "Price Difference", name: "price", widget: "number", value_type: "float"}
       - label: "Images"
         name: "images" 
         widget: "list" 
