--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,6 +14,8 @@ slug:
   encoding: "ascii"
   clean_accents: true
   sanitize_replacement: "-"
+media_folder: public/img
+public_folder: img
 collections:
   - name: "page"
     label: "Page"
@@ -51,6 +53,7 @@ collections:
       - {label: "Name", name: "name", widget: "string" }
       - {label: "Color", name: "color", widget: "string" }
       - {label: "Price", name: "price", widget: "number", value_type: "float"}
+      - {label: "Weight", name: "weight", widget: "number", value_type: "float"}
       - {label: "Description", name: "description", widget: 'text'}
       - label: "Variants"
         name: "variants"
