--- a/netlify.toml
+++ b/netlify.toml
@@ -12,7 +12,7 @@
 [context.production.environment]
   NODE_ENV = "production"
   NEXT_SERVERLESS = "true"
-  NETLIFY_NEXT_PLUGIN_SKIP = "true"
+  NETLIFY_NEXT_PLUGIN_SKIP = "false"
   [[redirects]]
     from = "https://shop.overcomewithchrist.com"
     to = "https://overcomewithchrist.com/shop"
