--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  command = "npm run build"
+  command = "npm run build && npm run export"
+  publish = "out"
 [build.processing]
   skip_processing = false
 [build.processing.css]
@@ -11,6 +12,7 @@
 [context.production.environment]
   NODE_ENV = "production"
   NEXT_SERVERLESS = "true"
+  NETLIFY_NEXT_PLUGIN_SKIP = "true"
   [[redirects]]
     from = "https://shop.overcomewithchrist.com"
     to = "https://overcomewithchrist.com/shop"
