--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "CI='' npm run build"
-  publish = ".next"
+  command = "npm run build && npm run export"
+  publish = "out"
 [build.processing]
   skip_processing = false
 [build.processing.css]
