--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "npm run build && npm run export"
-  publish = "out"
+  command = "next build"
+  publish = ".next"
 [build.processing]
   skip_processing = false
 [build.processing.css]
@@ -11,8 +11,3 @@
   minify = true
 [context.production.environment]
   NODE_ENV = "production"
-  [[redirects]]
-    from = "https://shop.overcomewithchrist.com"
-    to = "https://overcomewithchrist.com/shop"
-    status = 301
-    force = true
