--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,6 +14,8 @@ slug:
   encoding: "ascii"
   clean_accents: true
   sanitize_replacement: "-"
+media_folder: public/img
+public_folder: img
 collections:
   - name: "page"
     label: "Page"
@@ -47,21 +49,20 @@ collections:
     fields: 
       - {label: "layout", name: "layout", widget: "hidden", default: "product"}
       - {label: "Product Id", name: "pid", widget: "string"}
-      - {label: "Slug", name: "test", widget: "string" }
-      - {label: "Title", name: "title", widget: "string" }
+      - {label: "SKU", name: "sku", widget: "string" }
+      - {label: "Name", name: "name", widget: "string" }
+      - {label: "Color", name: "color", widget: "string" }
       - {label: "Price", name: "price", widget: "number", value_type: "float"}
+      - {label: "Weight", name: "weight", widget: "number", value_type: "float"}
       - {label: "Description", name: "description", widget: 'text'}
       - label: "Variants"
         name: "variants"
         widget: "list"
         summary: '{{fields.color}} / {{fields.size}}'
         require: "false"
-        fields: 
-          - {label: "Variant Id", name: "variantId", widget: "string"}
+        fields:
           - {label: "Size", name: "size", widget: "string"}
-          - {label: "Color", name: "color", widget: "string"}
-          - {label: "SKU", name: "sku", widget: "string"}
-          - {label: "Price", name: "price", widget: "number", value_type: "float"}
+          - {label: "Price Difference", name: "price", widget: "number", value_type: "float"}
       - label: "Images"
         name: "images" 
         widget: "list" 
