--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "tailwindcss": "^3.2.7"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.37.4"
   }
 }
