--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "eslint-config-next": "13.1.6",
     "feed": "^4.2.2",
     "frontmatter-markdown-loader": "^3.7.0",
-    "next": "13.1.6",
+    "next": "^13.4.4",
     "postcss": "^8.4.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
     "tailwindcss": "^3.2.7"
   }
