--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "@netlify/plugin-nextjs": "^4.37.4",
     "@sentry/nextjs": "^7.38.0",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
