--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,15 @@
   publish = ".next"
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+[build.processing.css]
+  bundle = true
+  minify = true
+[build.processing.js]
+  bundle = true
+  minify = true
+[context.production.environment]
+  [[redirects]]
+    from = "https://shop.overcomewithchrist.com"
+    to = "https://overcomewithchrist.com/shop"
+    status = 301
+    force = true
