--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,6 @@
 backend: 
-  name: git-gateway
-#  name: test-repo
+#  name: git-gateway
+  name: test-repo
   branch: main
   publish_mode: editorial_workflow
 media_library:
@@ -35,37 +35,10 @@ collections:
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Category", name: "category", widget: "select", options: ["Bible Study", "Resources", "Testimony", "Salvation", "Prayer"]}
+      - {label: "Category", name: "category", widget: "select", options: ["Bible Study", "Resources", "Testimony", "Salvation", "Prayer", "Creative"]}
       - {label: "Featured Image", name: "featuredImage", widget: "image"}
+      - {label: "Video Link", name: "videoLink", widget: "string"}
       - {label: "Summary", name: "summary", widget: "text"}
       - {label: "Publish Date", name: "date", widget: "datetime", date_format: "LL", format: "LL"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Author", name: "author", widget: "string", default: "Cyntia Seumo" }
-  - name: "products"
-    label: "Products"
-    label_singular: "Product"
-    folder: "src/content/products"
-    create: true
-    fields: 
-      - {label: "layout", name: "layout", widget: "hidden", default: "product"}
-      - {label: "Product Id", name: "pid", widget: "string"}
-      - {label: "SKU", name: "sku", widget: "string" }
-      - {label: "Name", name: "name", widget: "string" }
-      - {label: "Color", name: "color", widget: "string" }
-      - {label: "Price", name: "price", widget: "number", value_type: "float"}
-      - {label: "Weight", name: "weight", widget: "number", value_type: "float"}
-      - {label: "Description", name: "description", widget: 'text'}
-      - label: "Variants"
-        name: "variants"
-        widget: "list"
-        summary: '{{fields.color}} / {{fields.size}}'
-        require: "false"
-        fields:
-          - {label: "Size", name: "size", widget: "string"}
-          - {label: "Price Difference", name: "price", widget: "number", value_type: "float"}
-      - label: "Images"
-        name: "images" 
-        widget: "list" 
-        collapsed: true
-        summary: '{{fields.image}}'
-        field: {label: "Image", name: "image", widget: "image"}
