--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -37,7 +37,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Category", name: "category", widget: "select", options: ["Bible Study", "Resources", "Testimony", "Salvation", "Prayer", "Creative"]}
       - {label: "Featured Image", name: "featuredImage", widget: "image"}
-      - {label: "Video Link", name: "videoLink", widget: "string"}
+      - {label: "Video Link", name: "videoLink", widget: "string", required: false }
       - {label: "Summary", name: "summary", widget: "text"}
       - {label: "Publish Date", name: "date", widget: "datetime", date_format: "LL", format: "LL"}
       - {label: "Body", name: "body", widget: "markdown"}
